--- a/src/scss/_scenes.scss
+++ b/src/scss/_scenes.scss
@@ -26,7 +26,7 @@
   	}
 
 		.headline--small {
-			margin-bottom: 10px;
+			margin-bottom: 5px;
 		}
 
   	.headline.headline--large {
@@ -50,12 +50,27 @@
 		width: 100%;
 	}
 
+	.carousel__track {
+		overflow-y: visible;
+	}
+
   .animation__carousel-item {
   	display: flex;
   	flex-direction: column;
   	justify-content: center;
   	align-items: center;
   	max-height: 395px;
+  	padding-bottom: 8px;
+  	overflow: visible;
+
+  	.headline--small {
+  		padding-top: 20px;
+  	}
+
+  	@media(min-width: 45em) {
+  		padding-bottom: 30px;
+  		padding-top: 10px;
+  	}
 
   	img {
   		padding-left: 20px;
@@ -73,7 +88,7 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 35px;
+    margin-bottom: 30px;
     opacity: 100;
 
     @media(min-width: 500px) {
